--- a/buurbak/package.json
+++ b/buurbak/package.json
@@ -12,20 +12,20 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
-    "next": "14.1.3",
+    "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.2.25",
-    "@storybook/addon-essentials": "^8.0.2",
-    "@storybook/addon-interactions": "^8.0.2",
-    "@storybook/addon-links": "^8.0.2",
-    "@storybook/addon-onboarding": "^8.0.2",
-    "@storybook/blocks": "^8.0.2",
-    "@storybook/nextjs": "^8.0.4",
-    "@storybook/react": "^8.0.2",
-    "@storybook/test": "^8.0.2",
+    "@storybook/addon-essentials": "^8.0.5",
+    "@storybook/addon-interactions": "^8.0.5",
+    "@storybook/addon-links": "^8.0.5",
+    "@storybook/addon-onboarding": "^8.0.5",
+    "@storybook/blocks": "^8.0.5",
+    "@storybook/nextjs": "^8.0.5",
+    "@storybook/react": "^8.0.5",
+    "@storybook/test": "^8.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -34,7 +34,7 @@
     "eslint-config-next": "14.1.3",
     "eslint-plugin-storybook": "^0.8.0",
     "postcss": "^8",
-    "storybook": "^8.0.2",
+    "storybook": "^8.0.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
