--- a/buurbak/package.json
+++ b/buurbak/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@netlify/plugin-nextjs": "^5.0.0",
     "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18"
