--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "lucide-react": "^0.368.0",
     "next": "^14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-resizable": "^3.0.5",
+    "react-resizable-panels": "^2.0.18"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.2.25",
