--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@googlemaps/markerclusterer": "^2.5.3",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@heroicons/react": "^2.1.3",
+    "google-maps-react": "^2.0.6",
     "lucide-react": "^0.368.0",
     "next": "^14.1.4",
     "react": "^18",
@@ -29,6 +32,7 @@
     "@storybook/nextjs": "^8.0.5",
     "@storybook/react": "^8.0.5",
     "@storybook/test": "^8.0.5",
+    "@types/google.maps": "^3.55.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
