--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@googlemaps/markerclusterer": "^2.5.3",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@heroicons/react": "^2.1.3",
+    "@mui/material": "^5.15.16",
     "lucide-react": "^0.368.0",
     "next": "^14.2.3",
     "react": "^18.3.1",
@@ -36,6 +39,7 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.11.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "eslint-plugin-storybook": "^0.8.0",
