--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@googlemaps/react-wrapper": "^1.1.35",
     "@heroicons/react": "^2.1.3",
     "@mui/material": "^5.15.16",
+    "@mui/x-date-pickers": "^7.3.2",
+    "dayjs": "^1.11.11",
     "lucide-react": "^0.368.0",
     "next": "^14.1.4",
     "react": "^18",
