--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@googlemaps/markerclusterer": "^2.5.3",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@heroicons/react": "^2.1.3",
-    "@mui/material": "^5.15.16",
-    "@mui/x-date-pickers": "^7.3.2",
+    "@mui/material": "^5.15.17",
+    "@mui/x-date-pickers": "^7.4.0",
+    "@nextui-org/calendar": "^2.0.4",
+    "@nextui-org/system": "^2.1.2",
+    "@nextui-org/theme": "^2.2.3",
     "dayjs": "^1.11.11",
+    "framer-motion": "^11.2.0",
     "lucide-react": "^0.368.0",
     "next": "^14.2.3",
     "react": "^18.3.1",
