--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@heroicons/react": "^2.1.3",
     "@mui/material": "^5.15.17",
     "@mui/x-date-pickers": "^7.4.0",
+    "@nextui-org/autocomplete": "^2.0.16",
     "@nextui-org/calendar": "^2.0.4",
+    "@nextui-org/date-picker": "^2.0.7",
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/theme": "^2.2.3",
     "dayjs": "^1.11.11",
