--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.4",
     "react-resizable": "^3.0.5",
     "react-resizable-panels": "^2.0.18"
   },
