--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nextui-org/date-picker": "^2.0.7",
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/theme": "^2.2.3",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "framer-motion": "^11.2.0",
     "lucide-react": "^0.368.0",
