--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nextui-org/calendar": "^2.0.4",
     "@nextui-org/checkbox": "^2.1.0",
     "@nextui-org/date-picker": "^2.0.7",
+    "@nextui-org/modal": "^2.0.35",
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/theme": "^2.2.3",
     "date-fns": "^3.6.0",
@@ -29,6 +30,7 @@
     "framer-motion": "^11.2.0",
     "lucide-react": "^0.368.0",
     "next": "^14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
