--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@mui/material": "^5.15.17",
     "@mui/x-date-pickers": "^7.4.0",
     "@nextui-org/autocomplete": "^2.0.16",
+    "@nextui-org/button": "^2.0.38",
     "@nextui-org/calendar": "^2.0.4",
     "@nextui-org/checkbox": "^2.1.0",
     "@nextui-org/date-picker": "^2.0.7",
+    "@nextui-org/modal": "^2.0.41",
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/theme": "^2.2.3",
     "date-fns": "^3.6.0",
