--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@nextui-org/calendar": "2.0.4",
     "@nextui-org/checkbox": "2.1.0",
     "@nextui-org/date-picker": "2.0.7",
-    "@nextui-org/modal": "2.0.41",
-    "@nextui-org/system": "2.1.2",
+    "@nextui-org/modal": "^2.0.41",
+    "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "2.2.3",
     "date-fns": "3.6.0",
     "dayjs": "1.11.11",
@@ -58,8 +58,8 @@
     "eslint-config-next": "14.1.3",
     "eslint-plugin-storybook": "0.8.0",
     "postcss": "8",
-    "storybook": "8.0.5",
-    "tailwindcss": "3.3.0",
+    "storybook": "^8.3.4",
+    "tailwindcss": "^3.4.13",
     "typescript": "5"
   }
 }
