--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@emotion/react": "11.11.4",
-    "@emotion/styled": "11.11.5",
-    "@googlemaps/markerclusterer": "2.5.3",
-    "@googlemaps/react-wrapper": "1.1.35",
-    "@heroicons/react": "2.1.3",
-    "@mui/material": "5.15.17",
-    "@mui/x-date-pickers": "7.4.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@googlemaps/markerclusterer": "^2.5.3",
+    "@googlemaps/react-wrapper": "^1.1.35",
+    "@heroicons/react": "^2.1.3",
+    "@mui/material": "^5.15.17",
+    "@mui/x-date-pickers": "^7.4.0",
     "@nextui-org/autocomplete": "2.0.16",
     "@nextui-org/button": "2.0.38",
     "@nextui-org/calendar": "2.0.4",
@@ -25,7 +25,7 @@
     "@nextui-org/date-picker": "2.0.7",
     "@nextui-org/modal": "2.0.41",
     "@nextui-org/system": "2.1.2",
-    "@nextui-org/theme": "2.2.3",
+    "@nextui-org/theme": "^2.2.3",
     "date-fns": "3.6.0",
     "dayjs": "1.11.11",
     "framer-motion": "11.2.0",
@@ -59,7 +59,7 @@
     "eslint-plugin-storybook": "0.8.0",
     "postcss": "8",
     "storybook": "8.0.5",
-    "tailwindcss": "3.3.0",
+    "tailwindcss": "^3.3.0",
     "typescript": "5"
   }
 }
