--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@emotion/styled": "11.11.5",
     "@googlemaps/markerclusterer": "2.5.3",
     "@googlemaps/react-wrapper": "1.1.35",
-    "@heroicons/react": "2.1.3",
     "@mui/material": "5.15.17",
     "@mui/x-date-pickers": "7.4.0",
     "@nextui-org/autocomplete": "2.0.16",
@@ -26,11 +25,13 @@
     "@nextui-org/modal": "^2.0.41",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "2.2.3",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.4",
     "date-fns": "3.6.0",
     "dayjs": "1.11.11",
     "framer-motion": "11.2.0",
     "lucide-react": "0.368.0",
-    "next": "14.2.13",
+    "next": "^14.2.14",
     "next-auth": "4.24.7",
     "react": "18.3.1",
     "react-dom": "18.3.1",
