--- a/package.json
+++ b/package.json
@@ -41,14 +41,14 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "1.2.25",
-    "@storybook/addon-essentials": "8.0.5",
-    "@storybook/addon-interactions": "8.0.5",
-    "@storybook/addon-links": "8.0.5",
-    "@storybook/addon-onboarding": "8.0.5",
-    "@storybook/blocks": "8.0.5",
-    "@storybook/nextjs": "8.0.5",
-    "@storybook/react": "8.0.5",
-    "@storybook/test": "8.0.5",
+    "@storybook/addon-essentials": "^8.0.5",
+    "@storybook/addon-interactions": "^8.0.5",
+    "@storybook/addon-links": "^8.0.5",
+    "@storybook/addon-onboarding": "^8.0.5",
+    "@storybook/blocks": "^8.0.5",
+    "@storybook/nextjs": "^8.0.5",
+    "@storybook/react": "^8.0.5",
+    "@storybook/test": "^8.0.5",
     "@types/google.maps": "3.55.7",
     "@types/node": "20",
     "@types/react": "18.3.1",
@@ -59,7 +59,7 @@
     "eslint-config-next": "14.1.3",
     "eslint-plugin-storybook": "0.8.0",
     "postcss": "8",
-    "storybook": "8.0.5",
+    "storybook": "^8.0.5",
     "tailwindcss": "^3.3.0",
     "typescript": "5"
   }
