--- a/package.json
+++ b/package.json
@@ -12,55 +12,55 @@
   },
   "dependencies": {
     "@emotion/react": "11.11.4",
-    "@emotion/styled": "11.11.5",
-    "@googlemaps/markerclusterer": "2.5.3",
-    "@googlemaps/react-wrapper": "1.1.35",
-    "@mui/material": "5.15.17",
-    "@mui/x-date-pickers": "7.4.0",
-    "@nextui-org/autocomplete": "2.0.16",
-    "@nextui-org/button": "2.0.38",
-    "@nextui-org/calendar": "2.0.4",
-    "@nextui-org/checkbox": "2.1.0",
-    "@nextui-org/date-picker": "2.0.7",
+    "@emotion/styled": "^11.11.5",
+    "@googlemaps/markerclusterer": "^2.5.3",
+    "@googlemaps/react-wrapper": "^1.1.35",
+    "@mui/material": "^5.15.17",
+    "@mui/x-date-pickers": "^7.4.0",
+    "@nextui-org/autocomplete": "^2.0.16",
+    "@nextui-org/button": "^2.0.38",
+    "@nextui-org/calendar": "^2.0.4",
+    "@nextui-org/checkbox": "^2.1.0",
+    "@nextui-org/date-picker": "^2.0.7",
     "@nextui-org/modal": "^2.0.41",
     "@nextui-org/system": "^2.2.6",
-    "@nextui-org/theme": "2.2.3",
+    "@nextui-org/theme": "^2.2.3",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
-    "date-fns": "3.6.0",
-    "dayjs": "1.11.11",
-    "framer-motion": "11.2.0",
-    "lucide-react": "0.368.0",
-    "next": "^14.2.14",
-    "next-auth": "4.24.7",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-hook-form": "7.51.4",
-    "react-resizable": "3.0.5",
-    "react-resizable-panels": "2.0.18"
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.11",
+    "framer-motion": "^11.2.0",
+    "lucide-react": "^0.368.0",
+    "next": "^15.0.1",
+    "next-auth": "^4.24.8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.4",
+    "react-resizable": "^3.0.5",
+    "react-resizable-panels": "^2.0.18"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "1.2.25",
-    "@storybook/addon-essentials": "8.0.5",
-    "@storybook/addon-interactions": "8.0.5",
-    "@storybook/addon-links": "8.0.5",
-    "@storybook/addon-onboarding": "8.0.5",
-    "@storybook/blocks": "8.0.5",
-    "@storybook/nextjs": "8.0.5",
-    "@storybook/react": "8.0.5",
-    "@storybook/test": "8.0.5",
-    "@types/google.maps": "3.55.7",
-    "@types/node": "20",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
-    "autoprefixer": "10.0.1",
-    "daisyui": "4.11.1",
-    "eslint": "8",
-    "eslint-config-next": "14.1.3",
-    "eslint-plugin-storybook": "0.8.0",
-    "postcss": "8",
-    "storybook": "8.0.5",
+    "@chromatic-com/storybook": "^2.0.2",
+    "@storybook/addon-essentials": "^8.3.6",
+    "@storybook/addon-interactions": "^8.3.6",
+    "@storybook/addon-links": "^8.3.6",
+    "@storybook/addon-onboarding": "^8.3.6",
+    "@storybook/blocks": "^8.3.6",
+    "@storybook/nextjs": "^8.3.6",
+    "@storybook/react": "^8.3.6",
+    "@storybook/test": "^8.3.6",
+    "@types/google.maps": "^3.55.7",
+    "@types/node": "^20",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.0.1",
+    "daisyui": "^4.11.1",
+    "eslint": "^8",
+    "eslint-config-next": "^14.1.3",
+    "eslint-plugin-storybook": "^0.10.1",
+    "postcss": "^8",
+    "storybook": "^8.3.6",
     "tailwindcss": "^3.3.0",
-    "typescript": "5"
+    "typescript": "^5"
   }
 }
