--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
     "react-resizable": "^3.0.5",
-    "react-resizable-panels": "^2.0.18"
+    "react-resizable-panels": "^2.0.18",
+    "resend": "^4.0.1-alpha.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^2.0.2",
