--- a/package.json
+++ b/package.json
@@ -17,19 +17,20 @@
     "@googlemaps/react-wrapper": "^1.1.35",
     "@mui/material": "^5.15.17",
     "@mui/x-date-pickers": "^7.4.0",
-    "@nextui-org/autocomplete": "^2.0.16",
-    "@nextui-org/button": "^2.0.38",
-    "@nextui-org/calendar": "^2.0.4",
-    "@nextui-org/checkbox": "^2.1.0",
-    "@nextui-org/date-picker": "^2.0.7",
-    "@nextui-org/modal": "^2.0.41",
-    "@nextui-org/system": "^2.2.6",
-    "@nextui-org/theme": "^2.2.3",
+    "@nextui-org/autocomplete": "^2.3.7",
+    "@nextui-org/button": "^2.2.7",
+    "@nextui-org/calendar": "^2.2.7",
+    "@nextui-org/checkbox": "^2.3.6",
+    "@nextui-org/date-picker": "^2.3.7",
+    "@nextui-org/modal": "^2.2.5",
+    "@nextui-org/select": "^2.4.7",
+    "@nextui-org/system": "^2.4.4",
+    "@nextui-org/theme": "^2.4.3",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
-    "framer-motion": "^11.2.0",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.368.0",
     "next": "^14.0.0",
     "next-auth": "^4.24.8",
@@ -61,7 +62,7 @@
     "eslint-plugin-storybook": "^0.10.1",
     "postcss": "^8",
     "storybook": "^8.3.6",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
