--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@nextui-org/select": "^2.4.7",
     "@nextui-org/system": "^2.4.4",
     "@nextui-org/theme": "^2.4.3",
+    "@radix-ui/react-toast": "^1.2.4",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "framer-motion": "^11.15.0",
@@ -39,7 +42,9 @@
     "react-hook-form": "^7.54.0",
     "react-resizable": "^3.0.5",
     "react-resizable-panels": "^2.0.18",
-    "resend": "^4.0.1-alpha.0"
+    "resend": "^4.0.1-alpha.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^2.0.2",
