--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.5",
     "@googlemaps/markerclusterer": "^2.5.3",
     "@googlemaps/react-wrapper": "^1.1.35",
+    "@hotjar/browser": "^1.0.9",
     "@mui/material": "^5.15.17",
     "@mui/x-date-pickers": "^7.4.0",
     "@nextui-org/autocomplete": "^2.3.7",
